# bevy-starter

./: Cargo.toml  rustfmt.toml
.cargo/: config.toml
src/: main.rs
