[package]
name = "my_first_bevy"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy):
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# NOTE: the "dynamic" feature must be removed on release
bevy = { version = "0.9.0", features = ["dynamic"] }
